--- a/style.css
+++ b/style.css
@@ -11,10 +11,9 @@ body{
       rgb(128, 71, 94, 1) 0%,
       rgba(52, 52, 74, 1) 100%
     );
-    height: 50vh;
+    height: 100vh;
     margin: 0;
   }
-
   .watchBox{
     margin-top: 0.5em;
     font-weight: 600;
@@ -27,6 +26,8 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
+    background-image: url(./assets/hulubackround.jpg);
+  
   }
   .disneySection{
     background: linear-gradient(
@@ -34,6 +35,8 @@ body{
           rgb(71, 115, 128) 0%,
           rgba(52, 52, 74, 1) 100%
         );
-        height: 15vh;
-        margin: 0;
+        height: 25vh;
+        margin: 10;
+  
       }
+    
